# python-fretboard-old

./: .gitignore  pyproject.toml  requirements.txt  setup.py
demo/: tasks.py
diagram/: chord.py  fretboard.py  utils.py
fretboard/: __init__.py  chord.py  config.py  fretboard.py  utils.py
